# Midterm-Project-Zoomcamp

./: Dockerfile  README.md  app.py  docker-compose.yml  notebook.ipynb  predict.py  pyproject.toml  train.py
datasets/: modified_human_age_prediction.csv
