[tool.poetry]
name = "midterm-project"
version = "0.1.0"
description = ""
authors = ["SchneiderSix <104461916+SchneiderSix@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
scikit-learn = "^1.5.2"
pandas = "^2.2.3"
numpy = "^2.1.3"
xgboost = "^2.1.2"
seaborn = "^0.13.2"
matplotlib = "^3.9.2"
flasgger = "^0.9.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
